# tor-vpn

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
crates/bandwidth/: Cargo.toml
crates/bandwidth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: file.rs  lib.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/netstack/: Cargo.toml
crates/netstack/src/: lib.rs
crates/routing/: Cargo.toml
crates/routing/src/: cleanup.rs  dns.rs  guard.rs  lib.rs
crates/shutdown/: Cargo.toml
crates/shutdown/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/tcp/: Cargo.toml
crates/tcp/src/: lib.rs
crates/tor/: Cargo.toml
crates/tor/src/: lib.rs
crates/tun/: Cargo.toml
crates/tun/src/: lib.rs
src/: main.rs
tests/lima/: test.sh  tor-vpn.yaml
ui/: Cargo.toml  tauri.conf.json
ui/frontend/: index.html  package-lock.json  package.json
ui/frontend/src/: App.svelte  app.css
ui/frontend/src/components/: ConfigPanel.svelte  Dashboard.svelte  LogViewer.svelte  StatusIndicator.svelte
ui/frontend/src/lib/: api.ts  types.ts
ui/frontend/src/lib/stores/: config.ts  vpn.ts
ui/icons/: generate_icons.py  icon.icns
ui/scripts/: copy-sidecar.sh
ui/src/: config.rs  daemon.rs  main.rs  tray.rs
