[package]
name = "tor-vpn-ui"
version = "0.1.0"
edition = "2021"
description = "GUI for tor-vpn — manage the VPN daemon with a system tray and dashboard"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
state = { path = "../crates/state" }
ipc = { path = "../crates/ipc" }
config = { path = "../crates/config" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

