[package]
name = "dns"
version = "0.1.0"
edition = "2021"

[dependencies]
tor = { path = "../tor" }
bandwidth = { path = "../bandwidth" }
simple-dns = "0.11"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
netstack-smoltcp = "0.2"
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
