[package]
name = "ipc"
version = "0.1.0"
edition = "2021"
description = "IPC control socket for tor-vpn daemon — Unix domain socket / Windows named pipe"

[dependencies]
state = { path = "../state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
anyhow = "1"
