[package]
name = "routing"
version = "0.1.0"
edition = "2021"

[dependencies]
state = { path = "../state" }
route_manager = "0.2"
netstat2 = "0.11"
sysinfo = "0.38"
netdev = "0.40"
cidr = "0.3"
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-system-configuration = { version = "0.3", default-features = false, features = ["SCNetworkConfiguration", "SCPreferences", "SCSchemaDefinitions"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["CFString", "CFArray", "CFDictionary"] }
