[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
dns = { path = "../dns" }
bandwidth = { path = "../bandwidth" }
netstack-smoltcp = "0.2"
tokio = { version = "1", features = ["io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
